--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
-    "express": "^4.18.1",
+    "express": "^4.21.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.15.3",
     "pug": "^3.0.2"
   },
   "repository": {
